--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build with Make
+name: Build SDL2 Game
 
 on:
   push:
@@ -14,8 +14,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install build tools
-      run: sudo apt-get update && sudo apt-get install -y build-essential
+    - name: Install SDL2 dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev
 
-    - name: Run Make
+    - name: Build with Make
       run: make
+
+    - name: Upload executable
+      uses: actions/upload-artifact@v3
+      with:
+        name: juego
+        path: juego
+
